ewaste change by sk

--- a/BookListRazor/appsettings.json
+++ b/BookListRazor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":"Server=USMUMRANDAS01\\SQLEXPRESS;Database=aspnet-BulkyBook-5E51917C-DF90-4298-8B2B-619BD0A557E7;Trusted_Connection=True;MultipleActiveResultSets=true" 
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Ewaste;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
